# bitcoin-regtest-tui

./: .gitignore  Cargo.toml  README.md
crates/polar-cli/: Cargo.toml
crates/polar-cli/src/: main.rs
crates/polar-core/: Cargo.toml
crates/polar-core/src/: config.rs  error.rs  lib.rs  network.rs  node_info.rs
crates/polar-docker/: Cargo.toml
crates/polar-docker/src/: container.rs  lib.rs  logs.rs  ports.rs
crates/polar-nodes/: Cargo.toml
crates/polar-nodes/src/: bitcoin.rs  lib.rs  lnd.rs
crates/polar-tests/: Cargo.toml
crates/polar-tests/src/: lib.rs
crates/polar-tests/tests/: integration.rs  lightning_workflow.rs  network_operations.rs  node_info.rs
crates/polar-tests/tests/integration/: channel_close.rs  channel_info_display.rs  channel_operations.rs  funding_flow.rs  node_deletion.rs  payment_operations.rs
crates/polar-tui/: Cargo.toml
crates/polar-tui/src/: app.rs  event.rs  lib.rs  network_manager.rs
crates/polar-tui/src/ui/: layout.rs  mod.rs
