[package]
name = "polar-docker"
description = "Docker management for Polar TUI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
polar-core = { path = "../polar-core" }
bollard = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
