[package]
name = "polar-nodes"
description = "Node implementations for Polar TUI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
polar-core = { path = "../polar-core" }
polar-docker = { path = "../polar-docker" }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
